welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:4: error: value length is not a member of Int
	for (i<- 3 to (num.length)-1) {
                           ^